src/index.css
@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");

* {
  font-family: "Plus Jakarta Sans", sans-serif;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  word-wrap: break-word;
}

/* For Webkit browsers like Chrome, Safari */
::-webkit-scrollbar {
  width: 0.20rem;
}

::-webkit-scrollbar-track {
  background: none;
}

::-webkit-scrollbar-thumb {
  background: #888;
}

/* For Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: #888 #f1f1f1;
}

